# resonate-benchmark

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose-db.yaml  compose-otel.yaml  pyproject.toml
k6/: load-test.js
src/resonate_benchmark/: __init__.py  main.py  server.py  server_otel.py
src/resonate_benchmark/model/: request.py.bak  response.py
src/resonate_benchmark/nodes/: foo.py  foo_otel.py
src/resonate_benchmark/utils/: simulation.py
tests/: test_random_failure.py
